Fixed depracated Xbootclasspath